--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -1,25 +1,37 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+  android:paddingTop="@*android:dimen/status_bar_height">
+  <android.support.v4.view.ViewPager
+    android:id="@+id/pager"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"/>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+  <FrameLayout
+    android:id="@+id/up_container"
+    android:layout_width="match_parent"
+    android:layout_height="?actionBarSize"
+    android:background="@drawable/toolbar_gradient">
 
-    <FrameLayout
-        android:id="@+id/up_container"
-        android:background="@android:color/transparent"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize">
+    <ImageButton
+      android:id="@+id/action_up"
+      android:layout_width="56dp"
+      android:layout_height="?actionBarSize"
+      android:background="?selectableItemBackgroundBorderless"
+      android:contentDescription="@string/up"
+      android:src="@drawable/ic_arrow_back"
+      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+  </FrameLayout>
 
-        <ImageButton
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:id="@+id/action_up"
-            android:layout_width="56dp"
-            android:layout_height="?actionBarSize"
-            android:background="?selectableItemBackgroundBorderless"
-            android:contentDescription="@string/up"
-            android:src="@drawable/ic_arrow_back" />
-    </FrameLayout>
+  <android.support.design.widget.FloatingActionButton
+    android:id="@+id/share_fab"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom|end"
+    android:layout_marginBottom="@dimen/fab_margin"
+    android:layout_marginEnd="@dimen/fab_margin"
+    android:contentDescription="@string/action_share"
+    android:src="@drawable/ic_share"
+    app:fabSize="normal"/>
 </FrameLayout>
