--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -1,59 +1,51 @@
 <android.support.design.widget.CoordinatorLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/coordinatorLayout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context="com.example.xyzreader.ui.ArticleListActivity">
-    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
-    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
-    <android.support.design.widget.AppBarLayout
+  <android.support.design.widget.AppBarLayout
     android:id="@+id/appBar"
     android:layout_width="match_parent"
-    android:layout_height="112dp"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    android:fitsSystemWindows="true">
+    android:layout_height="128dp"
+    android:fitsSystemWindows="true"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
     <android.support.design.widget.CollapsingToolbarLayout
       android:id="@+id/collapsingToolbar"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      app:layout_scrollFlags="scroll|exitUntilCollapsed"
       android:fitsSystemWindows="true"
       app:contentScrim="@color/theme_primary"
-      app:expandedTitleMarginStart="48dp"
-      app:expandedTitleMarginEnd="64dp"
+      app:expandedTitleMarginStart="@dimen/large_padding"
+      app:layout_scrollFlags="scroll|exitUntilCollapsed"
       app:title="@string/app_name">
 
-        <android.support.v7.widget.Toolbar
-          android:id="@+id/toolbar"
-          android:layout_width="match_parent"
-          android:layout_height="?attr/actionBarSize"
-          app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-          app:layout_collapseMode="pin" />
+      <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_collapseMode="pin"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
     </android.support.design.widget.CollapsingToolbarLayout>
 
 
+  </android.support.design.widget.AppBarLayout>
 
-</android.support.design.widget.AppBarLayout>
-    <android.support.v4.widget.SwipeRefreshLayout
-      android:id="@+id/swipe_refresh_layout"
+  <android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swipe_refresh_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    <android.support.v7.widget.RecyclerView
+      android:id="@+id/recycler_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <android.support.v7.widget.RecyclerView
-          android:id="@+id/recycler_view"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:clipToPadding="false"
-          android:scrollbarStyle="outsideOverlay"
-          android:paddingTop="16dp"
-          android:paddingLeft="@dimen/list_side_margin"
-          android:paddingRight="@dimen/list_side_margin"
-          android:paddingBottom="16dp" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+      android:clipToPadding="false"
+      android:padding="@dimen/medium_padding"
+      android:scrollbarStyle="outsideOverlay"/>
+  </android.support.v4.widget.SwipeRefreshLayout>
 </android.support.design.widget.CoordinatorLayout>
