--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -21,5 +21,5 @@
     <color name="theme_primary">#4CAF50</color>
     <color name="theme_primary_dark">#1B5E20</color>
     <color name="theme_accent">#FF6D00</color>
-    <color name="ltgray">#ffe0e0e0</color>
+    <color name="ltgray">#1f1f1f</color>
 </resources>
