--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -1,8 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
-             android:layout_height="match_parent"
-  android:paddingTop="@*android:dimen/status_bar_height">
+             android:layout_height="match_parent">
+
   <android.support.v4.view.ViewPager
     android:id="@+id/pager"
     android:layout_width="match_parent"
@@ -32,6 +32,8 @@
     android:layout_marginBottom="@dimen/fab_margin"
     android:layout_marginEnd="@dimen/fab_margin"
     android:contentDescription="@string/action_share"
+    android:elevation="6dp"
     android:src="@drawable/ic_share"
+    android:translationZ="6dp"
     app:fabSize="normal"/>
 </FrameLayout>
