--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -6,10 +6,12 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context="com.example.xyzreader.ui.ArticleListActivity">
+
   <android.support.design.widget.AppBarLayout
     android:id="@+id/appBar"
     android:layout_width="match_parent"
     android:layout_height="128dp"
+    android:elevation="4dp"
     android:fitsSystemWindows="true"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
